# Flatlander

./: .gitignore  LICENSE  README.md  flatlander.py  pyproject.toml  shape_factory.py  svg_export.py  utils.py
shapes/: __init__.py  circle.py  rect.py
